- Fixed: Added: missing comma after "sortBy" field in tl_iso_attributes
- Fixed: Checkout gives an error on single quotes (#2576)
- Fixed: Shipment template does not show forms (#2479)
- Fixed: Sorting is ambiguous in ModuleIsotopeProductList.php (#2697)
- Fixed: Non-Admins cannot create a product type (#2261)
- Fixed: Order Id doesn't get incremented (#2222)
- Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)

Version 1.3.beta2 (2011-08-28)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Added: support for multilingual foreignKey in attribute table
- Added: a salutation text field to addresses (Ticket #329)
- Added: invisible hint to active step in checkout module (Ticket #331)
- Added: new rule product conditions to limit by product attribute
- Added: option to invert the rule condition (match/match not)
- Added: product list caching with intelligent self-configuration to display a "please wait" message only when necessary
- Added: caching tables to the maintenance cleaing options
- Added: .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
- Added: checkout stepcount classes (Ticket #491)
- Added: consistent surcharge classes to cart, checkout and order details (Ticket #494)
- Added: "hide in reader mode" option to product listing
- Added: SQL condition field to product listing (Ticket #114)
- Added: automated table/list rendering option for array attributes
- Added: price tiers to product template (Ticket #466)
- Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
- Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
- Improved: new function generateRequestUrl to remove GET-parameters from request string
- Improved: backend product list, no more "limit" option but can search & filter through all products and variants and translations (Ticket #495)
- Improved: error logging in postsale script (Ticket #390)